nav - only show (about) 5 items at a time (still need to fix the centering shift / transform)

--- a/App.css
+++ b/App.css
@@ -83,7 +83,10 @@ nav > div {
   flex-grow: 1;
   display: inline-block;
 
-  width: calc(100% * (1/5))
+  /*width: calc(100% * (1/5))*/
+
+  flex: 1 0 20%; /* explanation below */
+
 
 }
 
